# s3bucket-manager-app

./: .gitignore  CITATION.cff  GUIDE.md  LICENSE  NOTICE  README.md  llms.txt
backend/: Containerfile  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
backend/storage/: access.py  admin.py  admin_auth.py  auth_permissions.py  backends.py  middleware.py  models.py  pipeline.py  serializers.py  tests.py  tokens.py
backend/storage/fixtures/: nffadi_uo_mappings.yaml
backend/storage/management/commands/: ensure_superuser.py  load_uo_mappings.py  purge_local_staff_users.py  sync_all_tenants.py
backend/storage/migrations/: 0001_initial.py  0002_seed_initial_data.py  0003_user_display_username.py  0004_remove_non_nffadi_tenants.py  0005_unique_active_ceph_username.py  0006_encrypt_cached_credentials.py  0007_expand_encrypted_credential_fields.py  0008_rgwsquared_and_nffadi_cleanup.py  0009_alter_bucket_owner_alter_user_external_id_and_more.py  0010_remove_cached_s3_credentials.py
backend/storage/services/: crypto.py  permissions.py  rgw_squared.py  s3_ops.py  sync_service.py
backend/storage/views/: __init__.py  admin.py  auth.py  buckets.py
docs/: README.md  api-documentation.md  bucket-explorer-maintainer-guide.md  database-schema.html  dev-deployment-operations.md  dev-environment-overview.md  dev-environment-setup.md  production-deployment.md  rgwsquared-api.md  storage-cache-and-redeploy.md  testing-and-ci.md  uo-code-tenants.md
frontend/: Containerfile  index.html  nginx.conf  package-lock.json  package.json
k8s/: .env.example  app.sh  ci.sh  (+3 more)
(+67 files in other folders)
